--- a/FoodHockyExplore.ipynb
+++ b/FoodHockyExplore.ipynb
@@ -38,7 +38,7 @@
         "import_from_google_drive()\n",
         "\n",
         "!rm -rf \"/content/food-101\"\n",
-        "!cp -r \"/content/drive/MyDrive/mlcv/food-101\" \"/content/food-101\""
+        "!cp -r \"/content/drive/mlcv/\" \"/content/\""
       ]
     },
     {
@@ -231,9 +231,9 @@
         "\n",
         "import os\n",
         "\n",
-        "def trainModel(model, generator, modelName):\n",
-        "  model.save(modelName)\n",
-        "  checkpoint_path = f\"{modelName}/cp.ckpt\"\n",
+        "def train_model(model, generator, model_name):\n",
+        "  model.save(model_name)\n",
+        "  checkpoint_path = f\"{model_name}/cp.ckpt\"\n",
         "  # Create a callback that saves the model's weights\n",
         "  cp_callback = tf.keras.callbacks.ModelCheckpoint(filepath=checkpoint_path,\n",
         "                                                 save_weights_only=True,\n",
@@ -250,8 +250,38 @@
     {
       "cell_type": "code",
       "source": [
+        "def save_model_to_drive(model_name):\n",
+        "  shutil.copytree(f\"/content/{model_name}\", f\"/content/drive/MyDrive/mlcv/{model_name}\")"
+      ],
+      "metadata": {
+        "id": "n9lU_DPLhw0V"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics._plot.confusion_matrix import ConfusionMatrixDisplay\n",
+        "from sklearn.metrics import confusion_matrix, classification_report\n",
+        "import numpy as np\n",
+        "\n",
+        "def predict_and_assess_model(model, test_generator):\n",
+        "  result = model.predict(test_generator)\n",
+        "  print(result)"
+      ],
+      "metadata": {
+        "id": "9TY9ZUVQgpLs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "leNet_model = create_leNet_model()\n",
-        "trainModel(leNet_model, train_gen, \"lenet\")\n"
+        "train_model(leNet_model, train_gen, \"lenet\")\n",
+        "save_model_to_drive(\"lenet\")\n"
       ],
       "metadata": {
         "colab": {
@@ -260,7 +290,7 @@
         "id": "nC8EykCrM3cZ",
         "outputId": "8876727e-b81b-43cd-abdd-e9edbe8472da"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,10 +298,59 @@
           "text": [
             "INFO:tensorflow:Assets written to: lenet/assets\n",
             "Epoch 1/10\n",
-            "148/250 [================>.............] - ETA: 17s - loss: 2.3169 - accuracy: 0.1949"
+            "250/250 [==============================] - ETA: 0s - loss: 2.1446 - accuracy: 0.2467\n",
+            "Epoch 1: saving model to lenet/cp.ckpt\n",
+            "250/250 [==============================] - 45s 173ms/step - loss: 2.1446 - accuracy: 0.2467\n",
+            "Epoch 2/10\n",
+            "250/250 [==============================] - ETA: 0s - loss: 1.7133 - accuracy: 0.4020\n",
+            "Epoch 2: saving model to lenet/cp.ckpt\n",
+            "250/250 [==============================] - 43s 171ms/step - loss: 1.7133 - accuracy: 0.4020\n",
+            "Epoch 3/10\n",
+            "250/250 [==============================] - ETA: 0s - loss: 1.4388 - accuracy: 0.5077\n",
+            "Epoch 3: saving model to lenet/cp.ckpt\n",
+            "250/250 [==============================] - 43s 172ms/step - loss: 1.4388 - accuracy: 0.5077\n",
+            "Epoch 4/10\n",
+            "250/250 [==============================] - ETA: 0s - loss: 1.0345 - accuracy: 0.6486\n",
+            "Epoch 4: saving model to lenet/cp.ckpt\n",
+            "250/250 [==============================] - 43s 172ms/step - loss: 1.0345 - accuracy: 0.6486\n",
+            "Epoch 5/10\n",
+            "250/250 [==============================] - ETA: 0s - loss: 0.5895 - accuracy: 0.8091\n",
+            "Epoch 5: saving model to lenet/cp.ckpt\n",
+            "250/250 [==============================] - 48s 193ms/step - loss: 0.5895 - accuracy: 0.8091\n",
+            "Epoch 6/10\n",
+            "250/250 [==============================] - ETA: 0s - loss: 0.2880 - accuracy: 0.9120\n",
+            "Epoch 6: saving model to lenet/cp.ckpt\n",
+            "250/250 [==============================] - 44s 176ms/step - loss: 0.2880 - accuracy: 0.9120\n",
+            "Epoch 7/10\n",
+            "250/250 [==============================] - ETA: 0s - loss: 0.1480 - accuracy: 0.9594\n",
+            "Epoch 7: saving model to lenet/cp.ckpt\n",
+            "250/250 [==============================] - 43s 171ms/step - loss: 0.1480 - accuracy: 0.9594\n",
+            "Epoch 8/10\n",
+            "250/250 [==============================] - ETA: 0s - loss: 0.0969 - accuracy: 0.9736\n",
+            "Epoch 8: saving model to lenet/cp.ckpt\n",
+            "250/250 [==============================] - 43s 171ms/step - loss: 0.0969 - accuracy: 0.9736\n",
+            "Epoch 9/10\n",
+            "250/250 [==============================] - ETA: 0s - loss: 0.0787 - accuracy: 0.9786\n",
+            "Epoch 9: saving model to lenet/cp.ckpt\n",
+            "250/250 [==============================] - 43s 171ms/step - loss: 0.0787 - accuracy: 0.9786\n",
+            "Epoch 10/10\n",
+            "250/250 [==============================] - ETA: 0s - loss: 0.0774 - accuracy: 0.9789\n",
+            "Epoch 10: saving model to lenet/cp.ckpt\n",
+            "250/250 [==============================] - 43s 172ms/step - loss: 0.0774 - accuracy: 0.9789\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "mpmOQdkxiYus"
+      },
+      "execution_count": 44,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -281,7 +360,7 @@
       "name": "FoodHockyExplore.ipynb",
       "provenance": [],
       "mount_file_id": "1zWWz2rZZmK4nkUGZf8pimJGyPi4NlXf0",
-      "authorship_tag": "ABX9TyNrhwcJlZbZsa5lYX/8EcSi",
+      "authorship_tag": "ABX9TyNl6c412lDO2WLmNNyRicaI",
       "include_colab_link": true
     },
     "kernelspec": {
